# qsurface

./: README.md  examples.ipynb  pyproject.toml  requirements.txt  setup.py  svg_viz.py
demo/: demo.py  demo_faulty.py
qsurface/: __init__.py  __main__.py  main.py  plot.py  svg_viz.py  threshold.py
qsurface/codes/: __init__.py  _icons.py  elements.py
qsurface/codes/_template/: plot.py  sim.py
qsurface/codes/planar/: __init__.py  plot.py  sim.py
qsurface/codes/rotated/: plot.py  sim.py
qsurface/codes/toric/: plot.py  sim.py
qsurface/decoders/: __init__.py  _template.py
qsurface/decoders/mwpm/: __init__.py  plot.py  sim.py
qsurface/decoders/ufns/: __init__.py  elements.py  plot.py  sim.py
qsurface/decoders/unionfind/: __init__.py  elements.py  plot.py  sim.py
qsurface/errors/: __init__.py  _icons.py  _template.py  erasure.py  pauli.py
tests/: test_cli.py  test_code.py  test_main.py  test_mplbackends.py  test_mwpm.py  test_threshold.py  test_ufns.py  test_unionfind.py  variables.py
